<resources>
    <string name="app_name">Keluh Kesah Bangkit</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="empty_name">Harus lebih dari 6 karakter\n</string>
    <string name="empty_email">EmptyEmail\n</string>
    <string name="empty_password">EmptyPassword\n</string>
    <string name="password">Password</string>
    <string name="password_empty">password must contain more than 6 characters</string>
    <string name="register_button">Register</string>
    <string name="welcome">Selamat Datang di Aplikasi</string>
    <string name="welcome_message">Selamat datang di Aplikasi gajelas</string>
    <string name="email_invalid">Only email format\n</string>
    <string name="password_length">Password must contain more than 6 characters</string>
    <string name="content_description_start_icon">username</string>
    <string name="login">Login</string>
    <string name="Login_succes">Login Successs !</string>
    <string name="logout">Logout</string>
    <string name="welcome_message_afferlogin">Selamat datang,</string>
    <string name="check_all_stories">Check all stories</string>
    <string name="upload_story">+ Upload Story</string>
    <string name="description">description</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="no_media_selected">Empty Image\n</string>
    <string name="createdat">createdat</string>
    <string name="retry">retry\n</string>
    <string name="failed_to_load_data">error</string>
    <string name="not_available">Empty</string>
    <string name="successfully_logged_in">Sukses\n</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="nearby_story_map">Nearby Story Map</string>
</resources>